--- a/packages/components/base/source/1-atoms/table/_table-vars.scss
+++ b/packages/components/base/source/1-atoms/table/_table-vars.scss
@@ -4,7 +4,6 @@ $host: (
   '.c-table': (
     font: var(--font-copy-s),
     font-weight: var(--font-weight-regular),
-    border: 1px solid var(--color-black-alpha-1),
     cell-padding: 0.5rem 1.5rem 0.5rem 0.25rem,
   ),
 ) !default;
@@ -13,6 +12,19 @@ $header: (
   '.c-table': (
     font: var(--font-display-s),
     font-weight: var(--font-weight-bold),
+  ),
+) !default;
+
+$border: (
+  '.c-table': (
+    border: 1px solid var(--color-black-alpha-1),
+  ),
+) !default;
+
+$zebra: (
+  '.c-table': (
+    background-odd: var(--color-black-alpha-1),
+    background-even: transparent,
   ),
 ) !default;
 
