feat: add token for content padding

--- a/packages/components/base/source/0-base/3-objects/section/section.scss
+++ b/packages/components/base/source/0-base/3-objects/section/section.scss
@@ -19,7 +19,7 @@ $vars: meta.module-variables(section-vars);
 
   &__container {
     /* critical:start */
-    padding: 0 var(--spacing-m);
+    padding: 0 var(--g-content-padding);
     margin: auto;
     width: 100%;
     max-width: var(--g-content-width-default);
