--- a/packages/components/base/source/1-atoms/rich-text/_rich-text-vars.scss
+++ b/packages/components/base/source/1-atoms/rich-text/_rich-text-vars.scss
@@ -3,7 +3,7 @@ $name-: 'c-rich-text';
 $host: (
   ':root': (
     font: var(--font-copy-m),
-    vertical-spacing: calc(var(--spacing-m) / 2),
+    vertical-spacing: var(--spacing-m),
     horizontal-spacing: 1em,
     color: var(--color-black),
     font-weight: var(--font-weight-regular),
