--- a/packages/components/content/source/2-molecules/storytelling/_storytelling-vars.scss
+++ b/packages/components/content/source/2-molecules/storytelling/_storytelling-vars.scss
@@ -4,7 +4,7 @@ $host: (
   '.c-storytelling': (
     background-color: null,
     color: var(--color-black),
-    vertical-padding: var(--spacing-l),
+    vertical-padding: var(--spacing-xl),
     horizontal-padding: var(--spacing-m),
   ),
   '.c-headline': (
