--- a/packages/components/base/source/2-molecules/teaser/_teaser-vars.scss
+++ b/packages/components/base/source/2-molecules/teaser/_teaser-vars.scss
@@ -13,6 +13,7 @@ $host: (
       0 10px 20px -15px rgba(0, 0, 0, 0.023),
       0 25px 25px -35px rgba(0, 0, 0, 0.057),
     ),
+    padding: 1rem,
   ),
   '.c-teaser--style-dark': (
     color: var(--color-white),
