--- a/packages/components/base/source/2-molecules/teaser/teaser.scss
+++ b/packages/components/base/source/2-molecules/teaser/teaser.scss
@@ -31,7 +31,7 @@ $vars: meta.module-variables(teaser-vars);
 
   &__body {
     display: flex;
-    padding: 1rem;
+    padding: var(--c-teaser--padding);
   }
 
   &__text {
