fix: fix link font-weight in headlines

--- a/packages/components/base/source/0-base/2-generic/link/_link-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/link/_link-vars.scss
@@ -8,7 +8,7 @@ $host: (
     color: var(--color-black),
     color-hover: var(--color-black),
     background: transparent,
-    background-hover: var(--color-black-aplha-1),
+    background-hover: var(--color-black-alpha-1),
     border-radius: 0,
   ),
 ) !default;
