--- a/packages/components/blog/source/2-molecules/post-teaser/post-teaser.scss
+++ b/packages/components/blog/source/2-molecules/post-teaser/post-teaser.scss
@@ -50,6 +50,7 @@ $vars: meta.module-variables(post-teaser-vars);
 
     > a {
       color: var(--c-post-teaser_headline--color);
+      font-weight: inherit;
     }
   }
 
