docs: add storybook design-tokens addon
#200

--- a/packages/components/core/source/design-tokens/spacing/_spacing.scss
+++ b/packages/components/core/source/design-tokens/spacing/_spacing.scss
@@ -43,16 +43,10 @@ $xl: _responsive($_xl) !default;
       }
     }
   } @else {
-    @if $category == 'm' {
-      /*!
-      * @tokens Spacing
-      * @presenter Spacing
-      */
-    } @else {
-      /*!
-      * @tokens Ignore
-      */
-    }
+    /*!
+    * @tokens Spacing #{$category or xs}
+    * @presenter Spacing
+    */
     --spacing-#{$name}: #{$value};
   }
 }
