fix: move breakpoint css token to base.css
b/c it is used internally only and should not be modified by the user

--- a/packages/components/base/source/0-base/2-generic/root/_root.scss
+++ b/packages/components/base/source/0-base/2-generic/root/_root.scss
@@ -1,4 +1,5 @@
-/* stylelint-disable plugin/selector-bem-pattern, selector-no-qualifying-type */
+/* stylelint-disable selector-no-qualifying-type */
+@use '@kickstartds/core/source/core/breakpoint';
 @use './normalize';
 
 /* critical:start */
@@ -11,6 +12,7 @@
 }
 
 html {
+  --breakpoints: '#{breakpoint.breakpoints-to-json()}';
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
