--- a/packages/components/core/source/design-tokens/tokens.scss
+++ b/packages/components/core/source/design-tokens/tokens.scss
@@ -39,6 +39,7 @@
   // Global Tokens
   /* stylelint-disable-next-line length-zero-no-unit */
   --g-header-height: 0px;
+  --g-scroll-offset: var(--g-header-height);
 
   --g-content-width-default: 62rem;
   --g-content-width-narrow: 46.5rem;
