fix: overwrite lightbox icon path

--- a/packages/components/base/source/3-organisms/lightbox/_lightbox-vars.scss
+++ b/packages/components/base/source/3-organisms/lightbox/_lightbox-vars.scss
@@ -1,7 +1,7 @@
 $name-: 'pswp' !default;
 
 $host: (
-  '.pswp': (
+  ':root': (
     show-hide-transition-duration: 333ms,
     controls-transition-duration: 333ms,
     background-color: var(--color-black),
