--- a/packages/components/base/source/3-organisms/lightbox/lightbox.scss
+++ b/packages/components/base/source/3-organisms/lightbox/lightbox.scss
@@ -44,6 +44,6 @@ $vars: meta.module-variables(lightbox-vars);
   &__button,
   &__button--arrow--left:before,
   &__button--arrow--right:before {
-    background-image: var(--pswp--assets-path);
+    background-image: var(--pswp--assets-path) !important;
   }
 }
