fix: fix mobile visual height

--- a/packages/components/content/source/2-molecules/visual/_visual__image.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual__image.scss
@@ -29,9 +29,11 @@
 
   &,
   * {
-    /* critical:start */
-    min-height: inherit;
-    /* critical:end */
+    .c-visual--full & {
+      /* critical:start */
+      height: 100%;
+      /* critical:end */
+    }
   }
 
   img {
