--- a/packages/components/content/source/2-molecules/visual/visual.scss
+++ b/packages/components/content/source/2-molecules/visual/visual.scss
@@ -37,6 +37,15 @@ $vars: meta.module-variables(visual-vars);
   &__media {
     /* critical:start */
     position: relative;
+
+    &,
+    * {
+      min-height: inherit;
+    }
+
+    .c-visual--full & {
+      flex-grow: 1;
+    }
     /* critical:end */
 
     @include breakpoint.media('≥s') {
