--- a/packages/components/base/source/0-base/2-generic/link/_link.scss
+++ b/packages/components/base/source/0-base/2-generic/link/_link.scss
@@ -7,7 +7,7 @@ $vars: meta.module-variables(link-vars);
 @include custom-properties.styles($vars, true);
 
 /* critical:start */
-a {
+a:not(.c-button) {
   transition: 0.15s;
   font-weight: var(--g-link--font-weight);
   border-radius: var(--g-link--border-radius);
