fix: fix post teaser headline style

--- a/packages/components/base/source/0-base/2-generic/link/_link-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/link/_link-vars.scss
@@ -11,4 +11,7 @@ $host: (
     background-hover: var(--color-black-alpha-1),
     border-radius: 0,
   ),
+  'h1, h2, h3, h4, h5, h6': (
+    font-weight: var(--g-headline--font-weight),
+  ),
 ) !default;
