feat: add class to headline
so it can easily be selected

--- a/packages/components/base/source/2-molecules/headline/headline.scss
+++ b/packages/components/base/source/2-molecules/headline/headline.scss
@@ -46,7 +46,7 @@ $vars: meta.module-variables(headline-vars);
     padding-bottom: var(--spacing-xxl);
   }
 
-  > :first-child {
+  &__headline {
     /* critical:start */
     margin: 0;
     font: var(--g-headline--font);
