--- a/packages/components/base/source/2-molecules/teaser-box/teaser-box.scss
+++ b/packages/components/base/source/2-molecules/teaser-box/teaser-box.scss
@@ -41,6 +41,10 @@
 
       .c-button {
         --c-button--font: var(--font-ui-xs);
+
+        &--large {
+          --c-button--font: var(--font-ui-s);
+        }
       }
     }
 
@@ -50,6 +54,14 @@
 
       .c-button {
         --c-button--font: var(--font-ui-s);
+
+        &--small {
+          --c-button--font: var(--font-ui-xs);
+        }
+
+        &--large {
+          --c-button--font: var(--font-ui-m);
+        }
       }
     }
 
@@ -59,6 +71,14 @@
 
       .c-button {
         --c-button--font: var(--font-ui-m);
+
+        &--small {
+          --c-button--font: var(--font-ui-s);
+        }
+
+        &--large {
+          --c-button--font: var(--font-ui-l);
+        }
       }
     }
   }
