style: prettify scss

--- a/packages/components/core/source/core/_breakpoint.scss
+++ b/packages/components/core/source/core/_breakpoint.scss
@@ -7,7 +7,7 @@ $breakpoints: (
 );
 
 @forward 'include-media/dist/include-media' with (
-  $breakpoints: $breakpoints,
+  $breakpoints: $breakpoints
 );
 
 ///
