--- a/packages/components/base/source/1-atoms/input/datepicker/_datepicker.scss
+++ b/packages/components/base/source/1-atoms/input/datepicker/_datepicker.scss
@@ -11,7 +11,7 @@
   $pd-picker-bg: #fff,
   $pd-picker-border: transparent,
   $pd-picker-border-bottom: transparent,
-  $pd-picker-shadow: rgba(0,0,0, 0.5),
+  $pd-picker-shadow: rgba(0, 0, 0, 0.5),
   $pd-th-color: base.$color-black-50,
   $pd-day-color: base.$color-brand,
   $pd-day-bg: base.$color-white,
