--- a/packages/components/base/source/1-atoms/nav-toggle/nav-toggle.scss
+++ b/packages/components/base/source/1-atoms/nav-toggle/nav-toggle.scss
@@ -1,4 +1,4 @@
-@use "sass:math";
+@use 'sass:math';
 @use 'sass:meta';
 @use 'bourbon/core/bourbon';
 @use '@kickstartds/core/source/core/breakpoint';
