refactor: replace `css-element-queries` ponyfill with container queries polyfill

--- a/packages/components/base/source/2-molecules/content-box/content-box.scss
+++ b/packages/components/base/source/2-molecules/content-box/content-box.scss
@@ -8,6 +8,7 @@ $vars: meta.module-variables(content-box-vars);
 .c-content-box {
   margin-bottom: 2em;
   box-sizing: border-box;
+  contain: layout inline-size style;
 
   &--align-center {
     text-align: center;
@@ -62,9 +63,9 @@ $vars: meta.module-variables(content-box-vars);
     align-items: stretch;
     flex: 1 auto;
 
-    &[min-width~='0px'] {
+    @container (min-width: 0px) {
       --c-content-box_topic--font: var(--font-display-s);
-      --c-rich-text-font: var(--font-copy-xs);
+      --c-rich-text--font: var(--font-copy-xs);
 
       .c-button {
         --c-button--font: var(--font-ui-xs);
@@ -75,9 +76,9 @@ $vars: meta.module-variables(content-box-vars);
       }
     }
 
-    &[min-width~='200px'] {
+    @container (min-width: 200px) {
       --c-content-box_topic--font: var(--font-display-m);
-      --c-rich-text-font: var(--font-copy-s);
+      --c-rich-text--font: var(--font-copy-s);
 
       .c-button {
         --c-button--font: var(--font-ui-s);
@@ -92,9 +93,9 @@ $vars: meta.module-variables(content-box-vars);
       }
     }
 
-    &[min-width~='400px'] {
+    @container (min-width: 400px) {
       --c-content-box_topic--font: var(--font-display-l);
-      --c-rich-text-font: var(--font-copy-m);
+      --c-rich-text--font: var(--font-copy-m);
 
       .c-button {
         --c-button--font: var(--font-ui-m);
