style: satisfy stylelint

--- a/packages/components/base/source/0-base/1-tools/scss/_aspect-ratio.scss
+++ b/packages/components/base/source/0-base/1-tools/scss/_aspect-ratio.scss
@@ -5,7 +5,7 @@
   position: relative;
 
   @if ($width and $height) {
-    padding-top: percentage(math.div($height, $width));
+    padding-top: math.percentage(math.div($height, $width));
   }
 
   > * {
