--- a/packages/components/base/source/0-base/3-objects/section/section.scss
+++ b/packages/components/base/source/0-base/3-objects/section/section.scss
@@ -39,6 +39,7 @@ $vars: meta.module-variables(section-vars);
     width: 100%;
     max-width: var(--g-content-width-default);
     display: grid;
+    // stylelint-disable scss/no-global-function-names
     grid-template-columns: repeat(
       var(--l-section_col--repeat),
       minmax(
@@ -46,6 +47,7 @@ $vars: meta.module-variables(section-vars);
         var(--l-section_col--max-width)
       )
     );
+    // stylelint-enable scss/no-global-function-names
     grid-gap: var(--l-section_container--gutter);
     /* critical:end */
 
