--- a/packages/components/base/source/0-base/4-utilities/_animate.scss
+++ b/packages/components/base/source/0-base/4-utilities/_animate.scss
@@ -21,7 +21,7 @@
 .animate {
   animation-fill-mode: both;
 
-  @media (print), (prefers-reduced-motion) {
+  @media print, (prefers-reduced-motion) {
     animation: unset !important;
     transition: none !important;
   }
