--- a/packages/components/base/source/1-atoms/rich-text/rich-text.scss
+++ b/packages/components/base/source/1-atoms/rich-text/rich-text.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable no-descending-specificity */
 @use 'sass:meta';
 @use '@kickstartds/core/source/core/custom-properties';
 @use './rich-text-vars';
