--- a/packages/components/base/source/2-molecules/slider/_glide.core.scss
+++ b/packages/components/base/source/2-molecules/slider/_glide.core.scss
@@ -18,7 +18,7 @@
     list-style: none;
     backface-visibility: hidden;
     transform-style: preserve-3d;
-    touch-action: pan-Y;
+    touch-action: pan-y;
     overflow: hidden;
     padding: 0;
     white-space: nowrap;
