--- a/packages/components/base/source/3-organisms/content-navigation/_content-navigation.scss
+++ b/packages/components/base/source/3-organisms/content-navigation/_content-navigation.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 @use '../../0-base/1-tools/scss/grid';
 @use '@kickstartds/core/source/core/breakpoint';
 @use '../../0-base/0-settings/selector';
