--- a/packages/components/base/source/2-molecules/nav/nav-main/nav-main.scss
+++ b/packages/components/base/source/2-molecules/nav/nav-main/nav-main.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 @use '../../../0-base/1-tools/scss/details-reset';
 @use '../../../0-base/1-tools/scss/grid';
 @use '../../../0-base/1-tools/scss/helpers';
