--- a/packages/components/base/source/3-organisms/lightbox/lightbox.scss
+++ b/packages/components/base/source/3-organisms/lightbox/lightbox.scss
@@ -2,6 +2,7 @@
 @use '@kickstartds/core/source/core/custom-properties';
 @use './lightbox-vars';
 @use 'photoswipe/src/css/main' with (
+  $pswp__assets-path: '/images/lightbox/',
   $pswp__show-hide-transition-duration: #{var(
       --pswp--show-hide-transition-duration
     )},
@@ -16,6 +17,7 @@
   $pswp__include-minimal-style: true
 );
 @use 'photoswipe/src/css/default-skin/default-skin' with (
+  $pswp__assets-path: '/images/lightbox/',
   $pswp__show-hide-transition-duration: #{var(
       --pswp--show-hide-transition-duration
     )},
