feat: hide lazy images when js is deactivated
only hide images. other elements with `lazyload` class stay visible,
b/c the class is often used to trigger animations

--- a/packages/components/base/source/0-base/2-generic/lazyload/_lazyload.scss
+++ b/packages/components/base/source/0-base/2-generic/lazyload/_lazyload.scss
@@ -1,3 +1,4 @@
-html:not(.js) .lazyload {
+/* stylelint-disable-next-line selector-no-qualifying-type */
+html:not(.js) img.lazyload {
   display: none !important;
 }
