refactor: move negative numbers to the left in calc expressions
https://github.com/shellscape/postcss-values-parser/pull/144

--- a/packages/components/content/source/2-molecules/contact/contact.scss
+++ b/packages/components/content/source/2-molecules/contact/contact.scss
@@ -9,7 +9,7 @@ $vars: meta.module-variables(contact-vars);
 .c-contact {
   display: flex;
   flex-wrap: wrap;
-  margin: calc(var(--c-contact--gutter) * -1);
+  margin: calc(-1 * var(--c-contact--gutter));
 
   > * {
     margin: var(--c-contact--gutter);
