fix: show focus on input fields when using keyboard

--- a/packages/components/form/source/1-atoms/form-field/form-field.scss
+++ b/packages/components/form/source/1-atoms/form-field/form-field.scss
@@ -53,6 +53,11 @@ $vars: meta.module-variables(form-field-vars);
         var(--c-form-field_focus--border-color);
     }
 
+    &.focus-visible {
+      box-shadow: var(--c-form-field_focus--shadow)
+        var(--c-form-field_focus--border-color);
+    }
+
     &--is-invalid {
       --c-form-field--color: var(--color-error);
       --c-form-field--border-color: var(--color-error);
